Bug List: (This bug is not in your last search results)   Show last search results      Search page      Enter new bug
Bug#: 11971
Product:  
Component:  
Status: RESOLVED
Resolution: FIXED
Assigned To: Jason Merrill <jason@redhat.com>
Host:
Reported against  
Priority:  
Severity:  
Target Milestone:  
 
 
Target:
Reporter: poschmid@lbl.gov
Add CC:
CC:
Remove selected CCs
Build:
URL:
Summary:
Keywords:
Known to work:
Known to fail:

Attachment Description Type Created Size Actions
Create a New Attachment (proposed patch, testcase, etc.) View All

Bug 11971 depends on: Show dependency tree
Show dependency graph
Bug 11971 blocks:

Additional Comments:






View Bug Activity   |   Format For Printing   |   Clone This Bug


Description:   Last confirmed: 2003-08-18 21:47 Opened: 2003-08-18 21:13
The code a.C is rejected by gcc 3.4. This is a regression with respect to gcc
>3.3.

Environment:
System: Linux linux 2.4.20-4GB #1 Fri Jul 11 07:33:18 UTC 2003 i686 unknown unknown GNU/Linux
Architecture: i686
SuSE 8.2
host: i686-pc-linux-gnu
build: i686-pc-linux-gnu
target: i686-pc-linux-gnu
configured with: ../gcc/configure --enable-threads=posix --enable-languages=c,c++,f77,objc --enable-__cxa_atexit --enable-debug

How-To-Repeat:
source code a.C
#include <stdarg.h>

class A {
public:
  A();
  A(const A& x);
  A& operator= (const A& a);
 ~A();
};

void f(int count, A first...)
{                       
  va_list ap;           
  va_start(ap, first);
  A x = va_arg(ap, A);
}

int main()
{
  A a, b, c;
  f(3, a, b, c);
}

g++ -v -W -Wall -save-temps a.C
Reading specs from /usr/local/lib/gcc/i686-pc-linux-gnu/3.4/specs
Configured with: ../gcc/configure --enable-threads=posix --enable-languages=c,c++,f77,objc --enable-__cxa_atexit --enable-debug
Thread model: posix
gcc version 3.4 20030806 (experimental)
 /usr/local/libexec/gcc/i686-pc-linux-gnu/3.4/cc1plus -E -quiet -v -D_GNU_SOURCE a.C -mtune=pentiumpro -W -Wall -o a.ii
ignoring nonexistent directory "NONE/include"
ignoring nonexistent directory "/usr/local/lib/gcc/i686-pc-linux-gnu/3.4/../../../../i686-pc-linux-gnu/include"
#include "..." search starts here:
#include <...> search starts here:
 /usr/local/lib/gcc/i686-pc-linux-gnu/3.4/../../../../include/c++/3.4
 /usr/local/lib/gcc/i686-pc-linux-gnu/3.4/../../../../include/c++/3.4/i686-pc-linux-gnu
 /usr/local/lib/gcc/i686-pc-linux-gnu/3.4/../../../../include/c++/3.4/backward
 /usr/local/include
 /usr/local/lib/gcc/i686-pc-linux-gnu/3.4/include
 /usr/include
End of search list.
 /usr/local/libexec/gcc/i686-pc-linux-gnu/3.4/cc1plus -fpreprocessed a.ii -quiet -dumpbase a.C -mtune=pentiumpro -auxbase a -W -Wall -version -o a.s
GNU C++ version 3.4 20030806 (experimental) (i686-pc-linux-gnu)
	compiled by GNU C version 3.4 20030806 (experimental).
GGC heuristics: --param ggc-min-expand=47 --param ggc-min-heapsize=31899
a.C: In function `void f(int, A, ...)':
a.C:14: warning: cannot pass objects of non-POD type `class A' through `...'; 
   call will abort at runtime
a.C:15: warning: cannot receive objects of non-POD type `class A' through `...'
a.C:14: warning: second parameter of `va_start' not last named argument
a.C:15: internal compiler error: in cp_expr_size, at cp/cp-lang.c:330
Please submit a full bug report,
with preprocessed source if appropriate.
See <URL:http://gcc.gnu.org/bugs.html> for instructions.

# 1 "a.C"
# 1 "<built-in>"
# 1 "<command line>"
# 1 "a.C"
# 1 "/usr/local/lib/gcc/i686-pc-linux-gnu/3.4/include/stdarg.h" 1 3 4
# 43 "/usr/local/lib/gcc/i686-pc-linux-gnu/3.4/include/stdarg.h" 3 4
typedef __builtin_va_list __gnuc_va_list;
# 105 "/usr/local/lib/gcc/i686-pc-linux-gnu/3.4/include/stdarg.h" 3 4
typedef __gnuc_va_list va_list;
# 2 "a.C" 2

class A {
public:
  A();
  A(const A& x);
  A& operator= (const A& a);
 ~A();
};

void f(int count, A first...)
{
  va_list ap;
  __builtin_va_start(ap,first);
  A x = __builtin_va_arg(ap,A);
}

int main()
{
  A a, b, c;
  f(3, a, b, c);
}

------- Comment #1 From Wolfgang Bangerth 2003-08-18 21:47 -------
The ICE is certainly a regression. I guess the warning is warranted, since you 
really put objects of non-POD type through ... 
 
W. 

------- Comment #2 From Andrew Pinski 2003-08-18 21:58 -------
From Phil's regression hunter: Search converges between 2003-01-02-trunk (#182)
and 2003-
01-03-trunk (#183).

------- Comment #3 From janis187@us.ibm.com 2003-08-29 20:08 -------
The regression in PR 11971 was introduced or exposed by this patch:

--- gcc/gcc/ChangeLog ---

2003-01-02  Jason Merrill  <jason@redhat.com>

        * fold-const.c (fold) [COND_EXPR]: Avoid NOP_EXPRs better.

        * integrate.c (copy_decl_for_inlining): Don't clear the rtl for
        static/external decls.

--- gcc/gcc/cp/ChangeLog ---

2003-01-02  Jason Merrill  <jason@redhat.com>

        * call.c (build_conditional_expr): Stabilize lvalues properly.
        * cvt.c (ocp_convert): Don't build NOP_EXPRs of class type.
        * tree.c (lvalue_p_1): Don't allow sloppy NOP_EXPRs as lvalues.
        Don't allow CALL_EXPR or VA_ARG_EXPR, either.

        * call.c (convert_like_real): Call decl_constant_value for an
        IDENTITY_CONV even if there are no more conversions.

        [also cvt.c, decl2.c, dump.c, except.c, init.c, tree.c]

The regression hunt took place on i686-pc-linux-gnu using the submitter's
test case.  Before this patch the test case got these additional
warnings rather than the ICE:

11971.C: In function `int main()':
11971.C:22: warning: cannot pass objects of non-POD type `class A' through
   `...'; call will abort at runtime
11971.C:22: warning: cannot pass objects of non-POD type `class A' through
   `...'; call will abort at runtime

------- Comment #4 From Jason Merrill 2003-11-14 19:07 -------
Here is a valid program which we currently reject because va_start isn't magic
enough.  We currently treat it as a normal variadic function.

#include <stdarg.h>
                                                                               
                                                
class A {
public:
  A() {}
  A(const A& x) {}
  A& operator= (const A& a) {}
  ~A() {}
};
                                                                               
                                                
void f(A first...)
{
  va_list ap;
  va_start(ap, first);
  int x = va_arg(ap, int);
}
                                                                               
                                                
int main()
{
  A a;
  f(a, 3);
}

------- Comment #5 From Andrew Pinski 2003-11-29 21:45 -------
*** Bug 11929 has been marked as a duplicate of this bug. ***

------- Comment #6 From CVS Commits 2003-12-09 04:08 -------
Subject: Bug 11971

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	jason@gcc.gnu.org	2003-12-09 04:08:50

Modified files:
	gcc/cp         : ChangeLog call.c cp-tree.h ptree.c tree.c 

Log message:
	PR c++/11971
	* tree.c (build_local_temp): Split out from build_cplus_new.
	(force_target_expr): New fn.
	* call.c (call_builtin_trap): Call it.  Take a type parm.
	(convert_arg_to_ellipsis): Pass it.
	(build_x_va_arg): Use call_builtin_trap.
	
	PR c++/11929
	* call.c (magic_varargs_p): New fn.
	(build_over_call): Do no ellipsis conversions for arguments to
	functions with magic varargs.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/cp/ChangeLog.diff?cvsroot=gcc&r1=1.3789&r2=1.3790
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/cp/call.c.diff?cvsroot=gcc&r1=1.442&r2=1.443
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/cp/cp-tree.h.diff?cvsroot=gcc&r1=1.936&r2=1.937
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/cp/ptree.c.diff?cvsroot=gcc&r1=1.37&r2=1.38
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/cp/tree.c.diff?cvsroot=gcc&r1=1.355&r2=1.356


------- Comment #7 From Andrew Pinski 2003-12-09 06:47 -------
Fixed for 3.4.

Bug List: (This bug is not in your last search results)   Show last search results      Search page      Enter new bug